manifests/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: pingpong-app
spec:
  template:
    metadata:
      name: pingpong-app-v1
    spec:
      containers:
        - image: outisa/pingpong-application:5aaacb8a8b473e4b2fa1034e18a639e56970d1db
          env:
          - name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: postgres-credentials
                key: POSTGRES_PASSWORD
