manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mainapp-namespace
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3002
