manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /pingpong
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: pingpong-backend-svc
          servicePort: 80
